--- a/product.html
+++ b/product.html
@@ -15,55 +15,20 @@
 
 <body>
     <div class="wrapper">
-        <header class="header">
+		<header class="header">
 			<div class="header-top">
 				<div class="container">
-					<div class="header-in d-flex">
-						<nav class="header-nav">
-							<div class="header-nav-left">
-								<a href="!#" class="header-link active">Продукты</a>
-								<a href="!#" class="header-link">Фермеры</a>
-								<a href="!#" class="header-link">Рецепты</a>
-								<a href="!#" class="header-link">Блог</a>
-								<a href="!#" class="header-link">Рестораны <span>new</span></a>
-							</div>
-							<div class="header-nav-right">
-								<a href="!#" class="header-link">Путешествия <span>new</span> <img
-										src="./images/more.svg" alt=""></a>
-								<a href="!#" class="header-link">Стать продавцом <img src="./images/more.svg"
-										alt=""></a>
-							</div>
-						</nav>
-						<div class="header-actions">
-							<a href="!#" class="header-actions-link">
-								<img src="./images/loc.svg" alt="">
-								Москва
-							</a>
-							<a href="!#" class="header-actions-link">Обратная связь</a>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="header-bottom">
-				<div class="container">
-					<div class="header-block">
+					<div class="header__top-menu">
 						<a href="./index.html" class="logo">
-							<img src="./images/logo.svg" alt="">
+							<img src="./images/logo.jpg" alt="">
+							<span>Farm2fork</span>
 						</a>
-						<label for="catalog" class="catalog-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
-							<div class="bars-icon">
-								<span class="line1"></span>
-								<span class="line2"></span>
-								<span class="line1"></span>
-							</div>
-							<span>Каталог</span>
-						</label>
-						<div class="search-content">
-							<img src="./images/search.svg" alt="" class="search-img">
-							<input type="search" placeholder="Поиск продуктов и фермеров">
-							<button class="search-btn">Найти</button>
-						</div>
+						<a href="!#" class="header-actions-link header-actions-link-media">
+							<img src="./images/loc.svg" alt="">
+							Москва
+						</a>
+
+						<a href="#!" class="bars-media-top barsToggle"><img src="./images/bars-media.png" alt=""></a>
 
 						<div class="header-bottom-actions">
 							<div class="favorites-and-cart">
@@ -77,7 +42,7 @@
 							<a href="#!" class="login-btn" data-bs-toggle="modal" data-bs-target="#sign">
 								<img src="images/login-icon.png" alt="">Войти
 							</a>
-							<a href="#!" class="menu-btn" ><img src="images/menu-icon.png" alt=""></a>
+							<a href="#!" class="menu-btn"><img src="images/menu-icon.png" alt=""></a>
 
 							<div class="modal3">
 								<div class="modal-dialog">
@@ -188,8 +153,192 @@
 									</div>
 								</div>
 							</div>
-							
+
 						</div>
+					</div>
+
+					<div class="header-in">
+						<nav class="header-nav">
+							<div class="header-nav-left">
+								<a href="!#" class="header-link active">Продукты</a>
+								<a href="!#" class="header-link">Фермеры</a>
+								<a href="!#" class="header-link">Рецепты</a>
+								<a href="!#" class="header-link">Блог</a>
+								<a href="!#" class="header-link">Рестораны <span>new</span></a>
+							</div>
+							<div class="header-nav-right">
+								<a href="!#" class="header-link">
+									Путешествия 
+									<span>new</span> 
+									<img src="./images/more.svg" alt="">
+								</a>
+								<a href="!#" class="header-link">
+									Стать продавцом 
+									<img src="./images/more.svg" alt="">
+								</a>
+							</div>
+						</nav>
+						<div class="header-actions">
+							<a href="!#" class="header-actions-link">
+								<img src="./images/loc.svg" alt="">
+								Москва
+							</a>
+							<a href="!#" class="header-actions-link">Обратная связь</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="header-bottom">
+				<div class="container">
+					<div class="header-block">
+						<div class="head-left d-flex w-100">
+							<a href="./index.html" class="logo">
+								<img src="./images/logo.jpg" alt="">
+								<span>Farm2fork</span>
+							</a>
+							<label for="catalog" class="catalog-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+								<div class="bars-icon">
+									<span class="line1"></span>
+									<span class="line2"></span>
+									<span class="line1"></span>
+								</div>
+								<span>Каталог</span>
+							</label>
+							<div class="search-content">
+								<img src="./images/search.svg" alt="" class="search-img">
+								<input type="search" placeholder="Поиск продуктов и фермеров">
+								<button class="search-btn">Найти</button>
+							</div>
+						</div>
+
+						<div class="header-bottom-actions">
+							<div class="favorites-and-cart">
+								<a href="!#" class="favorites-icon">
+									<img src="./images/header-heart.svg" alt="">
+								</a>
+								<a href="!#" class="cart-icon">
+									<img src="images/basket-icon.png" alt="">
+								</a>
+							</div>
+							<a href="#!" class="login-btn" data-bs-toggle="modal" data-bs-target="#sign">
+								<img src="images/login-icon.png" alt="">Войти
+							</a>
+							<a href="#!" class="menu-btn"><img src="images/menu-icon.png" alt=""></a>
+
+							<div class="modal3">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal3__content">
+											<div class="modal-body">
+												<div class="modal3__left">
+													<h2 class="modal3-title">Экосистема Своё</h2>
+													<p class="modal3-text">Технологии для развития сельского хозяйства в
+														едином
+														цифровом пространстве</p>
+
+													<div class="modal3__cards">
+														<span class="modal3__cards-title">ДРУГИЕ ПЛОЩАДКИ
+															ЭКОСИСТЕМЫ</span>
+
+														<a href="#!" class="modal3__card">
+															<img src="./images/modal3-img1.webp" alt="">
+															<div class="modal3__card-wrap">
+																<div class="modal3__card-top">
+																	<span class="modal3-card-title">Своё За
+																		городом</span>
+																	<i class="fa-solid fa-arrow-right-long"></i>
+																</div>
+																<p class="modal3__card-text">Самая большая база сельских
+																	туров в
+																	России
+																</p>
+															</div>
+														</a>
+														<a href="#!" class="modal3__card">
+															<img src="./images/modal3-img2.webp" alt="">
+															<div class="modal3__card-wrap">
+																<div class="modal3__card-top">
+																	<span class="modal3-card-title">Своё
+																		Фермерство</span>
+																	<i class="fa-solid fa-arrow-right-long"></i>
+																</div>
+																<p class="modal3__card-text">Онлайн-сервисы и
+																	возможности Банка для
+																	эффективного ведения агробизнеса </p>
+															</div>
+														</a>
+														<a href="#!" class="modal3__card">
+															<img src="./images/modal3-img3.webp" alt="">
+															<div class="modal3__card-wrap">
+																<div class="modal3__card-top">
+																	<span class="modal3-card-title">Всё Своё</span>
+																	<i class="fa-solid fa-arrow-right-long"></i>
+																</div>
+																<p class="modal3__card-text">Маркетплейс, доска
+																	объявлений, новости
+																	и календари для дачников и садоводов</p>
+															</div>
+														</a>
+														<a href="#!" class="modal3__card">
+															<img src="./images/modal3-img4.webp" alt="">
+															<div class="modal3__card-wrap">
+																<div class="modal3__card-top">
+																	<span class="modal3-card-title">Своё Жильё</span>
+																	<i class="fa-solid fa-arrow-right-long"></i>
+																</div>
+																<p class="modal3__card-text">Площадка для создания
+																	комфортной жизни
+																	за городом</p>
+															</div>
+														</a>
+														<a href="#!" class="modal3__card modal3__card5">
+															<img src="./images/modal3-img5.webp" alt="">
+															<div class="modal3__card-wrap">
+																<div class="modal3__card-top">
+																	<span class="modal3-card-title">RSHB DIGITAL</span>
+																	<i class="fa-solid fa-arrow-right-long"></i>
+																</div>
+																<p class="modal3__card-text">Агротех для студентов,
+																	IT-специалистов,
+																	стартапов и предпринимателей</p>
+															</div>
+														</a>
+													</div>
+												</div>
+
+												<div class="modal3__right">
+													<a href="#!" class="modal3__right-contact">
+														<img src="./images/modal3-img1.webp" alt="">
+														<span>Контакты</span>
+													</a>
+
+													<span class="modal3__cards-title">ПОПУЛЯРНОЕ НА СВОЁМ РОДНОМ</span>
+
+													<div class="modal3__right-items">
+														<a href="#!" class="modal3__right-item">
+															<img src="./images/modal3-img1.webp" alt="">
+															<span>Блог</span>
+														</a>
+														<a href="#!" class="modal3__right-item">
+															<img src="./images/modal3-img1.webp" alt="">
+															<span>Рецепты</span>
+														</a>
+														<a href="#!" class="modal3__right-item">
+															<img src="./images/modal3-img1.webp" alt="">
+															<span>Доставка и оплата</span>
+														</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+						<a href="#!" class="bars-media barsToggle"><img src="./images/bars-media.png" alt=""></a>
 					</div>
 				</div>
 			</div>
@@ -3301,6 +3450,53 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Header media menu -->
+	<div class="header__menu-media-left">
+		<div class="header__menu-media-wrap">
+			<div class="header__menu-media-top">
+				<img src="./images/logo.svg" alt="">
+				<button type="button" class="modal-close barsToggle"><img src="./images/modal-close.png" alt=""></button>
+			</div>
+			<div class="header__manu-media-wrap">
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Продукты</a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Фермеры</a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Рецепты</a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Блог</a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Рестораны <span>new</span></a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Путешествия <span>new</span> <img src="./images/more.svg" alt=""></a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+				<div class="header__menu-media-item">
+					<a href="!#" class="header-link">Стать продавцом <img src="./images/more.svg" alt=""></a>
+					<i class="fa-solid fa-angle-right"></i>
+				</div>
+			</div>
+			<div class="header__menu-media-bottom">
+				<a href="#!"><i class="fa-solid fa-heart" style="color: #7d7f7e;"></i> Избранное</a>
+				<a href="tel:+7 (800) 222-73-80">+7 (800) 222-73-80</a>
+				<a href="#!">Обратная связь</a>
+			</div>
+		</div>
+		<div class="header__menu-media-bg barsToggle"></div>
+	</div>
+
 
     <script src="js/jquery-3.7.0.min.js"></script>
     <script src="libs/bootstrap5/popper.js"></script>
