--- a/product.html
+++ b/product.html
@@ -20,8 +20,7 @@
 				<div class="container">
 					<div class="header__top-menu">
 						<a href="./index.html" class="logo">
-							<img src="./images/logo.jpg" alt="">
-							<span>Farm2fork</span>
+							<img src="./images/logo.svg" alt="">
 						</a>
 						<a href="!#" class="header-actions-link header-actions-link-media">
 							<img src="./images/loc.svg" alt="">
@@ -194,8 +193,7 @@
 					<div class="header-block">
 						<div class="head-left d-flex w-100">
 							<a href="./index.html" class="logo">
-								<img src="./images/logo.jpg" alt="">
-								<span>Farm2fork</span>
+								<img src="./images/logo.svg" alt="">
 							</a>
 							<label for="catalog" class="catalog-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
 								<div class="bars-icon">
