--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<a href="./index.html" class="logo">
 								<img src="./images/logo.svg" alt="">
 							</a>
-							<label for="catalog" class="catalog-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+							<label for="catalog" class="catalog-btn header-block__mid-catalog">
 								<div class="bars-icon">
 									<span class="line1"></span>
 									<span class="line2"></span>
@@ -205,6 +205,7 @@
 								</div>
 								<span>Каталог</span>
 							</label>
+
 							<div class="search-content">
 								<img src="./images/search.svg" alt="" class="search-img">
 								<input type="search" placeholder="Поиск продуктов и фермеров">
@@ -224,110 +225,113 @@
 							<a href="#!" class="login-btn" data-bs-toggle="modal" data-bs-target="#sign">
 								<img src="images/login-icon.png" alt="">Войти
 							</a>
-							<a href="#!" class="menu-btn"><img src="images/menu-icon.png" alt=""></a>
 
-							<div class="modal3">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal3__content">
-											<div class="modal-body">
-												<div class="modal3__left">
-													<h2 class="modal3-title">Экосистема Своё</h2>
-													<p class="modal3-text">Технологии для развития сельского хозяйства в
-														едином
-														цифровом пространстве</p>
-
-													<div class="modal3__cards">
-														<span class="modal3__cards-title">ДРУГИЕ ПЛОЩАДКИ
-															ЭКОСИСТЕМЫ</span>
-
-														<a href="#!" class="modal3__card">
-															<img src="./images/modal3-img1.webp" alt="">
-															<div class="modal3__card-wrap">
-																<div class="modal3__card-top">
-																	<span class="modal3-card-title">Своё За
-																		городом</span>
-																	<i class="fa-solid fa-arrow-right-long"></i>
+							<div class="menu-btn-content">
+								<a href="#!" class="menu-btn"><img src="images/menu-icon.png" alt=""></a>
+	
+								<div class="modal3">
+									<div class="modal-dialog">
+										<div class="modal-content">
+											<div class="modal3__content">
+												<div class="modal-body">
+													<div class="modal3__left">
+														<h2 class="modal3-title">Экосистема Своё</h2>
+														<p class="modal3-text">Технологии для развития сельского хозяйства в
+															едином
+															цифровом пространстве</p>
+	
+														<div class="modal3__cards">
+															<span class="modal3__cards-title">ДРУГИЕ ПЛОЩАДКИ
+																ЭКОСИСТЕМЫ</span>
+	
+															<a href="#!" class="modal3__card">
+																<img src="./images/modal3-img1.webp" alt="">
+																<div class="modal3__card-wrap">
+																	<div class="modal3__card-top">
+																		<span class="modal3-card-title">Своё За
+																			городом</span>
+																		<i class="fa-solid fa-arrow-right-long"></i>
+																	</div>
+																	<p class="modal3__card-text">Самая большая база сельских
+																		туров в
+																		России
+																	</p>
 																</div>
-																<p class="modal3__card-text">Самая большая база сельских
-																	туров в
-																	России
-																</p>
-															</div>
-														</a>
-														<a href="#!" class="modal3__card">
-															<img src="./images/modal3-img2.webp" alt="">
-															<div class="modal3__card-wrap">
-																<div class="modal3__card-top">
-																	<span class="modal3-card-title">Своё
-																		Фермерство</span>
-																	<i class="fa-solid fa-arrow-right-long"></i>
+															</a>
+															<a href="#!" class="modal3__card">
+																<img src="./images/modal3-img2.webp" alt="">
+																<div class="modal3__card-wrap">
+																	<div class="modal3__card-top">
+																		<span class="modal3-card-title">Своё
+																			Фермерство</span>
+																		<i class="fa-solid fa-arrow-right-long"></i>
+																	</div>
+																	<p class="modal3__card-text">Онлайн-сервисы и
+																		возможности Банка для
+																		эффективного ведения агробизнеса </p>
 																</div>
-																<p class="modal3__card-text">Онлайн-сервисы и
-																	возможности Банка для
-																	эффективного ведения агробизнеса </p>
-															</div>
-														</a>
-														<a href="#!" class="modal3__card">
-															<img src="./images/modal3-img3.webp" alt="">
-															<div class="modal3__card-wrap">
-																<div class="modal3__card-top">
-																	<span class="modal3-card-title">Всё Своё</span>
-																	<i class="fa-solid fa-arrow-right-long"></i>
+															</a>
+															<a href="#!" class="modal3__card">
+																<img src="./images/modal3-img3.webp" alt="">
+																<div class="modal3__card-wrap">
+																	<div class="modal3__card-top">
+																		<span class="modal3-card-title">Всё Своё</span>
+																		<i class="fa-solid fa-arrow-right-long"></i>
+																	</div>
+																	<p class="modal3__card-text">Маркетплейс, доска
+																		объявлений, новости
+																		и календари для дачников и садоводов</p>
 																</div>
-																<p class="modal3__card-text">Маркетплейс, доска
-																	объявлений, новости
-																	и календари для дачников и садоводов</p>
-															</div>
-														</a>
-														<a href="#!" class="modal3__card">
-															<img src="./images/modal3-img4.webp" alt="">
-															<div class="modal3__card-wrap">
-																<div class="modal3__card-top">
-																	<span class="modal3-card-title">Своё Жильё</span>
-																	<i class="fa-solid fa-arrow-right-long"></i>
+															</a>
+															<a href="#!" class="modal3__card">
+																<img src="./images/modal3-img4.webp" alt="">
+																<div class="modal3__card-wrap">
+																	<div class="modal3__card-top">
+																		<span class="modal3-card-title">Своё Жильё</span>
+																		<i class="fa-solid fa-arrow-right-long"></i>
+																	</div>
+																	<p class="modal3__card-text">Площадка для создания
+																		комфортной жизни
+																		за городом</p>
 																</div>
-																<p class="modal3__card-text">Площадка для создания
-																	комфортной жизни
-																	за городом</p>
-															</div>
-														</a>
-														<a href="#!" class="modal3__card modal3__card5">
-															<img src="./images/modal3-img5.webp" alt="">
-															<div class="modal3__card-wrap">
-																<div class="modal3__card-top">
-																	<span class="modal3-card-title">RSHB DIGITAL</span>
-																	<i class="fa-solid fa-arrow-right-long"></i>
+															</a>
+															<a href="#!" class="modal3__card modal3__card5">
+																<img src="./images/modal3-img5.webp" alt="">
+																<div class="modal3__card-wrap">
+																	<div class="modal3__card-top">
+																		<span class="modal3-card-title">RSHB DIGITAL</span>
+																		<i class="fa-solid fa-arrow-right-long"></i>
+																	</div>
+																	<p class="modal3__card-text">Агротех для студентов,
+																		IT-специалистов,
+																		стартапов и предпринимателей</p>
 																</div>
-																<p class="modal3__card-text">Агротех для студентов,
-																	IT-специалистов,
-																	стартапов и предпринимателей</p>
-															</div>
-														</a>
+															</a>
+														</div>
 													</div>
-												</div>
-
-												<div class="modal3__right">
-													<a href="#!" class="modal3__right-contact">
-														<img src="./images/modal3-img1.webp" alt="">
-														<span>Контакты</span>
-													</a>
-
-													<span class="modal3__cards-title">ПОПУЛЯРНОЕ НА СВОЁМ РОДНОМ</span>
-
-													<div class="modal3__right-items">
-														<a href="#!" class="modal3__right-item">
+	
+													<div class="modal3__right">
+														<a href="#!" class="modal3__right-contact">
 															<img src="./images/modal3-img1.webp" alt="">
-															<span>Блог</span>
+															<span>Контакты</span>
 														</a>
-														<a href="#!" class="modal3__right-item">
-															<img src="./images/modal3-img1.webp" alt="">
-															<span>Рецепты</span>
-														</a>
-														<a href="#!" class="modal3__right-item">
-															<img src="./images/modal3-img1.webp" alt="">
-															<span>Доставка и оплата</span>
-														</a>
+	
+														<span class="modal3__cards-title">ПОПУЛЯРНОЕ НА СВОЁМ РОДНОМ</span>
+	
+														<div class="modal3__right-items">
+															<a href="#!" class="modal3__right-item">
+																<img src="./images/modal3-img1.webp" alt="">
+																<span>Блог</span>
+															</a>
+															<a href="#!" class="modal3__right-item">
+																<img src="./images/modal3-img1.webp" alt="">
+																<span>Рецепты</span>
+															</a>
+															<a href="#!" class="modal3__right-item">
+																<img src="./images/modal3-img1.webp" alt="">
+																<span>Доставка и оплата</span>
+															</a>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -930,6 +934,104 @@
 				</div>
 			</div>
 		</footer>
+	</div>
+
+	<!-- catalog-menu -->
+	<div class="header-catalog">
+		<div class="header-catalog__container">
+			<div class="header-catalog__outer size-container">
+				<div class="header-catalog__left">
+					<div class="header-catalog__left-scroll">
+						<ul>
+							<li class="active">
+								<a href="#!"><span>Молоко, яйца и молочная продукция</span></a>
+							</li>
+							<li class="">
+								<a href="#!"><span>Мясо, птица, кролик</span></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="header-catalog__right">
+					<div class="header-catalog__right-scroll">
+						<div class="header-catalog__inner active">
+							<div class="header-catalog__inner-scroll">
+								<div class="header-catalog__inner-title">
+									<a href="#!"><span>Молоко, яйца и молочная продукция</span></a>
+								</div>
+								<div class="header-catalog__inner-list">
+									<ul>
+										<li>
+											<a href="#!"><span>Молоко и сливки</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Творог</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Яйцо</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Масло сливочное, топленое, гхи</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Сырки творожные</span></a>
+										</li>
+									</ul>
+									
+								</div>
+							</div>
+						</div>
+						<div class="header-catalog__inner">
+							<div class="header-catalog__inner-scroll">
+								<div class="header-catalog__inner-title">
+									<a href="#!"><span>Мясо, птица, кролик</span></a>
+								</div>
+								<div class="header-catalog__inner-list">
+									<ul>
+										<li>
+											<a href="#!"><span>Зеленый ценник</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Утка</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Говядина и телятина</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Курица</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Кролик</span></a>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<a href="#!"><span>Полуфабрикаты</span></a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
@@ -3652,7 +3754,8 @@
 	</div>
 
 
-	<script src="js/jquery-3.7.0.min.js"></script>
+	<!-- <script src="js/jquery-3.7.0.min.js"></script> -->
+	<script src="js/jquery.min.js"></script>
 	<script src="libs/bootstrap5/popper.js"></script>
 	<script src="libs/bootstrap5/bootstrap.min.js"></script>
 	<script src="js/swiper-bundle.min.js"></script>
